<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RainTimer</string>
    <string name="tab_preferences">Preferences</string>
    <string name="tab_history">History</string>
    <string name="tab_timer">Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_event">Add Event</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="event_list">Event List</string>
    <string name="average">Average</string>
    <string name="total">Total</string>
    <string name="history_mode_title">Mode</string>
    <string name="choose_btn_title">Choose</string>
    <string name="start_date">Since</string>
    <string name="end_date">Till</string>
    <string name="default_event">Please choose a event&#8230;</string>
    <string name="favorite_events">Favorites</string>
</resources>