<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/history_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Spinner android:id="@+id/event_spinner_history" 
           android:layout_width="fill_parent"
           android:layout_height="36dip" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dip"
        android:orientation="horizontal"
        android:layout_marginTop="3dip" >
        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/start_date"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dip" />
        <TextView
            android:id="@+id/start_date_picker"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            style="@style/ButtonTextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dip"
        android:orientation="horizontal"
        android:layout_marginTop="3dip" >
        <TextView 
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:text="@string/end_date"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dip" />
        <TextView
            android:id="@+id/end_date_picker"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            style="@style/ButtonTextView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dip" >
        <TextView
            android:text="@string/history_mode_title"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dip" />
        <Switch
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:textOn="@string/average"
            android:textOff="@string/total"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>