<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <TextView 
        android:id="@+id/timer_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/event_list"
        style="@style/EventListTitle" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />
    <ListView
        android:id="@+id/event_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
    <Button
        android:id="@+id/add_event_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event" />
    <Button
        android:id="@+id/backup_restore_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_restore" />
</LinearLayout>